--- a/assets/css/att.css
+++ b/assets/css/att.css
@@ -4,14 +4,19 @@
 	padding-bottom:15px;
 
 }
+.padding-top-none{
+	padding-top: 0px;
+} 
+.padding-bottom-none{
+	padding-bottom: 0px;
+}
 .submit,.bulk_upload{margin-top:24px;}
 table.dataTable tr.odd { background-color: #E2E4FF; }
 .navbar{height: 72px;margin-bottom: 1px;}
 .home{
-	background-image: url(../images/devhome.png);
+	background-image: url(../images/ud-back.jpg);
 	height: calc(100vh - 70px);;
 	height: -moz-calc(100vh - 73px);
-	background-repeat: repeat-x;
 	background-size: cover;
 	border-bottom: 3px solid white;
 }
